network-policy/base/policies/samples/test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
  labels:
    app: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
        egress-8000: "true"
        egress-8002: "true"
    spec:
      securityContext:
        runAsUser: 10000
        runAsGroup: 10000
      containers:
      - name: busybox
        image: busybox
        command: ["sleep", "10000"]
