network-policy/base/policies/samples/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
        ingress-8000: "true"
        ingress-8001: "true"
    spec:
      containers:
      - name: port8000
        image: busybox
        command: ["httpd", "-f", "-p", "8000", "-h", "/etc"]
        ports:
        - containerPort: 8000
          protocol: TCP
      - name: port8001
        image: busybox
        command: ["httpd", "-f", "-p", "8001", "-h", "/etc"]
        ports:
        - containerPort: 8001
          protocol: TCP
      - name: port8002
        image: busybox
        command: ["httpd", "-f", "-p", "8002", "-h", "/etc"]
        ports:
        - containerPort: 8002
          protocol: TCP
      - name: port8003
        image: busybox
        command: ["httpd", "-f", "-p", "8003", "-h", "/etc"]
        ports:
        - containerPort: 8003
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app: web
spec:
  selector:
    app: web
  type: ClusterIP
  ports:
  - name: port8000
    protocol: TCP
    port: 8000
    targetPort: 8000
  - name: port8001
    protocol: TCP
    port: 8001
    targetPort: 8001
  - name: port8002
    protocol: TCP
    port: 8002
    targetPort: 8002
  - name: port8003
    protocol: TCP
    port: 8003
    targetPort: 8003
