network-policy/base/policies/samples/egress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: egress-deny
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: egress-8000
spec:
  podSelector:
    matchLabels:
      egress-8000: "true"
  policyTypes:
  - Egress
  egress:
  - ports:
    - port: 8000
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: egress-8001
spec:
  podSelector:
    matchLabels:
      egress-8001: "true"
  policyTypes:
  - Egress
  egress:
  - ports:
    - port: 8001
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: egress-8002
spec:
  podSelector:
    matchLabels:
      egress-8002: "true"
  policyTypes:
  - Egress
  egress:
  - ports:
    - port: 8002
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: egress-8003
spec:
  podSelector:
    matchLabels:
      egress-8003: "true"
  policyTypes:
  - Egress
  egress:
  - ports:
    - port: 8003
