network-policy/base/policies/samples/ingress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-deny
spec:
  podSelector: {}
  policyTypes:
  - Ingress
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-8000
spec:
  podSelector:
    matchLabels:
      ingress-8000: "true"
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - port: 8000
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-8001
spec:
  podSelector:
    matchLabels:
      ingress-8001: "true"
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - port: 8001
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-8002
spec:
  podSelector:
    matchLabels:
      ingress-8002: "true"
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - port: 8002
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-8003
spec:
  podSelector:
    matchLabels:
      ingress-8003: "true"
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - port: 8003
